Archive2/b8/45660d36989a35/output
main.cpp:43:1: error: unterminated comment
 /* In .txt file :
 ^
main.cpp: In function 'int main()':
main.cpp:34:16: warning: statement has no effect [-Wunused-value]
    arrayday[day];
                ^
main.cpp:35:18: warning: statement has no effect [-Wunused-value]
    arraypush[push];
                  ^
